[gd_scene load_steps=7 format=3 uid="uid://dbup3084spplv"]

[ext_resource type="Script" path="res://behaviours/Behaviours.gd" id="1_hcxbl"]
[ext_resource type="Script" path="res://behaviours/SeekPlayerBehaviour.gd" id="2_2s2p4"]
[ext_resource type="Script" path="res://behaviours/RandomWalkBehaviour.gd" id="3_1at4m"]
[ext_resource type="Script" path="res://behaviours/ObstacleAvoidanceBehaviour.gd" id="4_qfae4"]
[ext_resource type="Script" path="res://behaviours/GuardStartingPointBehaviour.gd" id="5_gf3jh"]
[ext_resource type="Script" path="res://behaviours/StrafeingBehaviour.gd" id="6_oyosj"]

[node name="Behaviours" type="Node2D"]
script = ExtResource("1_hcxbl")
collision_detection_range = 300
max_range = 600.0
draw_context_maps = true

[node name="SeekPlayerBehaviour" type="Node" parent="."]
script = ExtResource("2_2s2p4")

[node name="RandomWalkBehaviour" type="Node" parent="."]
script = ExtResource("3_1at4m")

[node name="ObstacleAvoidanceBehaviour" type="Node" parent="."]
script = ExtResource("4_qfae4")

[node name="GuardStartingPointBehaviour" type="Node2D" parent="."]
script = ExtResource("5_gf3jh")

[node name="StrafeingBehaviour" type="Node" parent="."]
script = ExtResource("6_oyosj")
